# YarnSpinner-GDExtension

./: .gitignore  LICENSE  icon.svg.import  project.godot
Samples/: TestScene.tscn
Samples/test/: HelloWorld.yarn  HelloWorld.yarn.import  VNExampleDialogue.yarn  VNExampleDialogue.yarn.import  VisualNovel.yarnproject  VisualNovel.yarnproject.import
Samples/test/scripts/: yarn_test.gd
addons/yarnspinner-gdextension/: YarnSpinner.gdextension  plugin.cfg  yarnspinner-gdextension.gd
addons/yarnspinner-gdextension/editor/: YarnCompileErrorsPropertyEditor.gd  YarnMarkupPaletteInspectorPlugin.gd  YarnProjectInspectorPlugin.gd
addons/yarnspinner-gdextension/editor/icons/: YarnSpinnerFailed.png.import  YarnSpinnerLogo.png.import  YarnSpinnerNotTested.png.import  YarnSpinnerSuccess.png.import  mini_YarnSpinnerLogo.png.import
addons/yarnspinner-gdextension/editor/ui/: LineEditWithSubmit.gd  (+6 more)
addons/yarnspinner-gdextension/gdextension/: Cargo.toml
addons/yarnspinner-gdextension/gdextension/src/: dialogue_runner.rs  function_info.rs  gd_compilation.rs  gd_declaration.rs  gd_string_info.rs  lib.rs  localization.rs  markup_palette.rs  player.rs  project.rs  string_table_entry.rs  translation_server_text_provider.rs  yarn_callable.rs  yarn_compiler.rs  yarn_conversion_utils.rs  yarn_dialogue_option.rs  yarn_line.rs  yarn_variable_storage.rs
addons/yarnspinner-gdextension/importers/: yarn_importer.gd  yarn_project_importer.gd
demo-project/: YarnSpinner.gdextension  icon.svg.import  icon.tscn  project.godot
gdextension/: Cargo.toml
gdextension/src/: lib.rs
(+10 files in other folders)
