[package]
name = "yarn_spinner_gdextension"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]  # Compile this crate to a dynamic C library.

[dependencies]
csv = "1.3.0"
glob = "0.3.1"
godot = { git = "https://github.com/godot-rust/gdext", branch = "master", features = ["serde"] }
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
yarnspinner = {version = "0.2.0", features = ["serde"] }
